Modifica apportata FilmService V1.2